[package]
name = "pinnd"
edition = "2021"
version = "0.0.1"
authors = ["thrizzle. <thrizzle@terabyteis.me>"]
keywords = ["github", "pinnedrepo", "pinned", "repo", "gh"]
categories = []

[dependencies]
actix-web = "4.0.0-rc.2"
cached = "0.30.0"
env_logger = "0.9.0"
select = "0.5.0"
microserde = "0.1.13"

[dependencies.reqwest]
version = "0.11"
features = []
optional = false

[features]