[package]
name = "pinned"
edition = "2021"
version = "0.0.1"
authors = ["thrizzle. <thrizzle@terabyteis.me>"]
keywords = ["github", "pinnedrepo", "pinned", "repo", "gh"]
categories = []

[dependencies]
actix-web = "4.0.0-rc.2"
cached = "0.30.0"
env_logger = "0.9.0"
select = "0.5.0"
microserde = "0.1.13"
surf = "2.3.2"


[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"


[features]
